# hyperbore-bridge-sol

./: AUDIT.md  Anchor.toml  CLAUDE.md  Readme.md  pnpm-lock.yaml
programs/bridge-sol/: Cargo.toml
programs/bridge-sol/src/: lib.rs
sdk/: README.md  package.json
sdk/src/: eventListener.ts  example.ts  idl.ts  index.ts  types.ts  utils.ts
tests/: bridge-sol.ts
