[package]
name = "bridge-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
bytemuck_derive = "=1.8.1"
anchor-spl = { version = "0.31.0", features = ["metadata", "token", "associated_token"] }
secp256k1 = {version = "0.30.0", features = ["recovery"]}
sha2 = "0.10.8"